# warehouse_mas

./: .gitignore  CMakeLists.txt  README.md  package.xml  requirements.txt
launch/: warehouse_mas.launch.py
scripts/: loader.py  loader_manager.py  robot.py  robot_manager.py  unloading_point.py
scripts/system_manager/: system_manager.py
scripts/system_manager/static/css/: style.css
scripts/system_manager/static/js/: main.js  main_en.js
scripts/system_manager/templates/: index.html  index_en.html
